--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-slideshow-image": "^1.3.3",
     "redux": "^4.0.5",
     "styled-components": "^5.0.0"
   },
