--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-slideshow-image": "^1.3.3",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "text-mask-addons": "^3.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
