--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "olx-clone",
   "version": "0.1.0",
-  "homepage": "https://adelmodias.github.io/olx-clone/",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
